--- a/adaptive_app/pubspec.yaml
+++ b/adaptive_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.3
   url_launcher: ^6.1.2
   flex_color_scheme: ^5.0.1
+  split_view: ^3.1.0
 
 dev_dependencies:
   flutter_test:
