--- a/adaptive_app/pubspec.yaml
+++ b/adaptive_app/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   url_launcher: ^6.1.2
   flex_color_scheme: ^5.0.1
   split_view: ^3.1.0
+  googleapis_auth: ^1.3.1
+  google_sign_in: ^5.3.2
+  extension_google_sign_in_as_googleapis_auth: ^2.0.4
 
 dev_dependencies:
   flutter_test:
